# Falcor

./: .clang-format  .clang-format-ignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  ATest.txt  BuildFalcor.bat  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CodingConvention.cpp  Falcor.sln  Falcor.sln.REMOTE  LICENSE.md  Makefile  Mogwai.sln  NewFile1  README.md  appveyor.yml  dependencies.xml  environment.yml  setup.bat  setup.sh  setup_vs2019.bat  setup_vs2022.bat  slangdconfig.json  testAgain.txt  update_dependencies.bat
Source/Falcor/: CMakeLists.txt  Falcor.h  Falcor.manifest  Falcor.natvis  Falcor.props  Falcor.vcxproj  Falcor.vcxproj.filters  FalcorCUDA.props  FalcorExperimental.h  FalcorPython.cpp  GlobalState.cpp  GlobalState.h  ShaderSource.targets  ShaderSource.xml  dependencies.xml  stdafx.cpp  stdafx.h
Source/Falcor/Core/: Assert.h  AssetResolver.cpp  AssetResolver.h  Enum.h  Error.cpp  Error.h  ErrorHandling.cpp  ErrorHandling.h  Errors.cpp  Errors.h  FalcorConfig.h  Framework.cpp  Framework.h  GLFW.h  HotReloadFlags.h  Macros.h  Object.cpp  Object.h  ObjectPython.h  Plugin.cpp  Plugin.h  Renderer.h  Sample.cpp  Sample.h  SampleApp.cpp  SampleApp.h  Testbed.cpp  Testbed.h  Version.cpp  Version.h  Window.cpp  Window.h
Source/Falcor/Data/: ApplyAO.ps.slang  HostDeviceData.h  HostDeviceData.slang  HostDeviceSharedCode.h  HostDeviceSharedMacros.h  Raster.slang  ShaderCommon.slang  UnitTest.cs.hlsl  VertexAttrib.h
Source/Falcor/DiffRendering/: AggregateGradients.cs.slang  DiffDebugParams.slang  DiffMaterialData.slang  DiffSceneIO.slang  DiffSceneQuery.slang  GradientIOWrapper.slang  InverseOptimizationParams.slang  SceneGradientInfo.slang  SceneGradients.cpp  SceneGradients.h  SceneGradients.slang  SharedTypes.slang
Source/Falcor/Raytracing/: RtBindingTable.cpp  RtBindingTable.h  RtProgramVars.cpp  RtProgramVars.h  RtProgramVarsHelper.cpp  RtProgramVarsHelper.h  RtShader.cpp  RtShader.h  RtState.cpp  RtState.h  RtStateObject.cpp  RtStateObject.h  RtStateObjectHelper.h  ShaderTable.cpp  ShaderTable.h
Source/Falcor/RenderGraph/: RenderGraph.cpp  RenderGraph.h  RenderGraphCompiler.cpp  RenderGraphCompiler.h  RenderGraphExe.cpp  RenderGraphExe.h  RenderGraphIR.cpp  RenderGraphIR.h  RenderGraphImportExport.cpp  RenderGraphImportExport.h  RenderGraphUI.cpp  RenderGraphUI.h  RenderPass.cpp  RenderPass.h  RenderPassHelpers.cpp  RenderPassHelpers.h  RenderPassLibrary.cpp  RenderPassLibrary.h  RenderPassReflection.cpp  RenderPassReflection.h  RenderPassStandardFlags.h  ResourceCache.cpp  ResourceCache.h
Source/Falcor/RenderPasses/: BlitPass.cpp  BlitPass.h  DepthPass.cpp  DepthPass.h  ForwardLightingPass.cpp  ForwardLightingPass.h  ImageLoader.cpp  ImageLoader.h  ResolvePass.cpp  ResolvePass.h
Source/Falcor/Scene/: HitInfo.cpp  HitInfo.h  HitInfo.slang  HitInfoType.slang  IScene.cpp  IScene.h  Importer.cpp  Importer.h  ImporterError.h  Intersection.slang  MeshIO.cs.slang  NullTrace.cs.slang  Raster.slang  Raytracing.slang  RaytracingInline.slang  Scene.cpp  Scene.h  Scene.slang  SceneBlock.slang  SceneBuilder.cpp  SceneBuilder.h  SceneBuilderAccess.h  SceneBuilderDump.cpp  SceneBuilderDump.h  SceneCache.cpp  SceneCache.h  SceneDefines.slangh  SceneIDs.h  ScenePrimitiveDefines.slangh  SceneRayQueryInterface.slang  SceneTypes.slang  Shading.slang  ShadingData.slang  TextureSampler.slang  Transform.cpp  Transform.h  TriangleMesh.cpp  TriangleMesh.h  VertexAttrib.slangh  VertexData.slang
Source/Falcor/ShadingUtils/: BRDF.slang  Helpers.slang  Lights.slang  Raytracing.slang  Scene.slang  Shading.slang  Skinning.slang
Source/Falcor/Testing/: UnitTest.cpp  UnitTest.cs.slang  UnitTest.h
Source/Falcor/Utils/: AlignedAllocator.h  ArgList.cpp  ArgList.h  AsyncTextureLoader.cpp  AsyncTextureLoader.h  Attributes.slang  BinaryFileStream.h  BufferAllocator.cpp  BufferAllocator.h  CryptoUtils.cpp  CryptoUtils.h  CudaRuntime.h  CudaUtils.cpp  CudaUtils.h  Dictionary.h  Helpers.slang  HostDeviceShared.slangh  IndexedVector.h  InternalDictionary.h  Logger.cpp  Logger.h  NVAPI.slang  NVAPI.slangh  NumericRange.h  ObjectID.h  ObjectIDPython.h  PathResolving.cpp  PathResolving.h  Properties.cpp  Properties.h  Settings.cpp  Settings.h  SharedCache.h  SlangUtils.slang  SplitBuffer.h  StringFormatters.h  StringUtils.cpp  StringUtils.h  TaskManager.cpp  TaskManager.h  (+5 more)
Source/Modules/USDUtils/: CMakeLists.txt  ConvertedInput.cpp  ConvertedInput.h  ConvertedMaterialCache.cpp  ConvertedMaterialCache.h  USDHelpers.h  USDScene1Utils.h  USDUtils.cpp  USDUtils.h
Source/Mogwai/: AppData.cpp  AppData.h  CMakeLists.txt  Mogwai.cpp  Mogwai.h  Mogwai.vcxproj  Mogwai.vcxproj.filters  MogwaiScripting.cpp  MogwaiSettings.cpp  MogwaiSettings.h  stdafx.cpp  stdafx.h
Source/Mogwai/Data/: BSDFViewer.py  Config.py  DenoisedPathTracer.py  ForwardRenderer.py  MinimalPathTracer.py  PathTracer.py  PathTracerNRD.py  RTXDI.py  RTXGI.py  VBufferPathTracer.py
Source/Mogwai/Testing/: testCSM.py  testFXAA.py  testForwardRendering.py  testGaussianBlur.py  testSSAO.py  testSVGF.py  testTAA.py  testToneMapping.py
Source/RenderPasses/: CMakeLists.txt  make_new_pass_project.bat  make_new_pass_project.py
Source/RenderPasses/AAPathTracer/: AAPathTracer.cpp  AAPathTracer.h  AAPathTracer.rt.slang  CMakeLists.txt
Source/RenderPasses/AccumulatePass/: Accumulate.cs.slang  AccumulatePass.cpp  AccumulatePass.h  AccumulatePass.vcxproj  AccumulatePass.vcxproj.filters  CMakeLists.txt
Source/RenderPasses/Antialiasing/: Antialiasing.cpp  Antialiasing.vcxproj  Antialiasing.vcxproj.filters  CMakeLists.txt
Source/RenderPasses/BSDFOptimizer/: BSDFOptimizer.cpp  BSDFOptimizer.cs.slang  BSDFOptimizer.h  BSDFOptimizerHelpers.slang  BSDFOptimizerParams.slang  BSDFViewer.cs.slang  CMakeLists.txt
Source/RenderPasses/BSDFViewer/: BSDFViewer.cpp  BSDFViewer.cs.slang  BSDFViewer.h  BSDFViewer.vcxproj  BSDFViewer.vcxproj.filters  BSDFViewerParams.h  BSDFViewerParams.slang  CMakeLists.txt
Source/RenderPasses/BlitPass/: BlitPass.cpp  BlitPass.h  BlitPass.vcxproj  BlitPass.vcxproj.filters  CMakeLists.txt
(+3563 files in other folders)
